<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/randomColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ctec.sillyproject.MainActivity" >

    <Button
        android:id="@+id/colorButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/uglyGreen"
        android:text="@string/button1Text"
        android:textColor="@color/Blue"
        android:textColorHint="@color/black" />

    <TextView
        android:id="@+id/sillyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/funText"
        android:textColor="@color/uglyGreen" />

    <Button
        android:id="@+id/ChangeButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/colorButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:background="@color/White"
        android:text="@string/ChangePageText" />

</RelativeLayout>